# aquifer

./: README.md  aquifer-frontend.cabal  aquifer.cabal  stack.yaml
src/: Lib.hs  Model.hs
