name:                aquifer
version:             0.1.0.0
synopsis:            Personal water consumption tracker.
description:         .
homepage:            https://pente.benkard.de/tag/aquifer/
license:             AGPL-3
license-file:        COPYING.AGPL
author:              Matthias Andreas Benkard
maintainer:          code@mulk.eu
copyright:           Copyright 2016 Matthias Andreas Benkard
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , reflex
                     , reflex-dom
                     , ghcjs-dom
                     , prompt
                     , lens
                     , classy-prelude
                     , containers-unicode-symbols
                     , base-unicode-symbols
                     , array
                     , time
                     , safe
                     , scientific
                     , mtl
                     , free
                     , either
                     , aeson
                     , containers
                     , here
  default-language:    Haskell2010
  default-extensions:  PostfixOperators
                     , OverloadedStrings
                     , MonadComprehensions
                     , RecursiveDo
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ParallelListComp
                     , MultiParamTypeClasses
                     , NoMonomorphismRestriction
                     , FunctionalDependencies
                     , RankNTypes
                     , ExistentialQuantification
                     , ScopedTypeVariables
                     , ImplicitParams
                     , FlexibleContexts
                     , FlexibleInstances
                     , EmptyDataDecls
                     , KindSignatures
                     , BangPatterns
                     , TypeSynonymInstances
                     , TemplateHaskell
                     , Arrows
                     , PatternGuards
                     , MagicHash
                     , TypeFamilies
                     , UnicodeSyntax
                     , StandaloneDeriving
                     , TypeOperators
                     , RelaxedPolyRec
                     , UnboxedTuples
                     , ExtendedDefaultRules
                     , DeriveDataTypeable
                     , PackageImports
                     , ConstrainedClassMethods
                     , QuasiQuotes
                     , TransformListComp
                     , ViewPatterns
                     , TupleSections
                     , DeriveFunctor
                     , DeriveTraversable
                     , DeriveFoldable
                     , DoAndIfThenElse
                     --, Generics

executable aquifer-output
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , aquifer
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://pente.benkard.de/diffusion/AF/aquifer.git
